--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
 
 publising.project.group=io.github.sgpublic
-publising.project.version=0.1.0-snapshot
+publising.project.version=0.1.0
 publising.project.website=https://github.com/sgpublic/buildSrc
 publising.project.vcsUrl=https://github.com/sgpublic/buildSrc.git
