--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@ kotlin.code.style=official
 
 publising.project.group=io.github.sgpublic
 publising.project.version=0.1.6
-publising.project.website=https://github.com/sgpublic/buildSrc
-publising.project.vcsUrl=https://github.com/sgpublic/buildSrc.git
+publising.project.website=https://github.com/sgpublic/PublishingPlugins
+publising.project.vcsUrl=https://github.com/sgpublic/PublishingPlugins.git
