--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 kotlin.code.style=official
 
 publising.project.group=io.github.sgpublic
-publising.project.version=0.1.7
+publising.project.version=1.0.0-alpha01
 publising.project.website=https://github.com/sgpublic/PublishingPlugins
 publising.project.vcsUrl=https://github.com/sgpublic/PublishingPlugins.git
+
+
+publising.gitlab.projectId=12
